crates/tui/snapshots/fullscreen/interaction_flow/context_configuration_Fullscreen_chinese.snap
---
source: crates/tui/src/app/interaction_flow_tests.rs
expression: frame
---
  .                                                                   [仪表盘]

● 请先在 /config 中设置模型上下文窗口，再发送消息。












  ────────────────────────────────────────────────────────────────────────────
  >
  ────────────────────────────────────────────────────────────────── 自动模型

  ⏸ 手动 · ← 仪表盘 · ? 查看快捷键
