crates/tui/snapshots/fullscreen/interaction_flow/model_errors_in_conversation.snap
---
source: crates/tui/src/app/interaction_flow_tests.rs
expression: frame
---
  .                                                                [Dashboard]

● Check your provider and model configuration in /config.

● Authentication failed (401). Check your provider credentials in /config.

● Too many requests (429). Try again later.








  ────────────────────────────────────────────────────────────────────────────
  >
  ─────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual · ← Dashboard · ? for shortcuts
