crates/tui/snapshots/fullscreen/interaction_flow/recovered_conversation_draft.snap
---
source: crates/tui/src/app/interaction_flow_tests.rs
expression: "render(&restored, 80, 20)"
---
  .                                                                [Dashboard]














  ────────────────────────────────────────────────────────────────────────────
  > conversation draft
  ─────────────────────────────────────────────────────────── Automatic model

  ⏸ Manual
